src/page_db.h

/// @addtogroup CrawledPage
/// @{
/** The information that comes with a link inside a crawled page.
 *
 * The link score is used to decide which links should be crawled next. It
 * is application dependent and tipically computed by looking at the link
 * surrounding text.
 */
typedef struct {
     char *url;   /**< ASCII, null terminated string for the page URL*/
     float score; /**< An estimated value of the link score */
} LinkInfo;
/** A (resizable) array of page links.
 *
 * Initially:
 *   n_links = 0
 *   m_links = PAGE_LINKS_MIN_LINKS
 *
 * Always:
 *   0 <= n_links <= m_links
 *
 * */
typedef struct {
     LinkInfo *link_info; /**< Array of LinkInfo */
     size_t n_links;      /**< Number of items inside link_info */
     size_t m_links;      /**< Maximum number of items that can be stored inside link_info */
} PageLinks;
/** The information that comes with a crawled page.
 *
 * We do not allocate any space for error handling since the operations are very
 * simple. Functions return an int to signal the status, a 0 meaning success and -1
 * meaning error. The only type of error possible is a memory error where a malloc or
 * realloc has failed.
 * */
typedef struct {
     char *url;                   /**< ASCII, null terminated string for the page URL*/
     PageLinks *links;            /**< List of links inside this page */
     double time;                 /**< Number of seconds since epoch */
     float score;                 /**< A number giving an idea of the page content's value */
     char *content_hash;          /**< A hash to detect content change since last crawl.
                                       Arbitrary byte sequence */
     size_t content_hash_length;  /**< Number of byes of the content_hash */
} CrawledPage;
/** Create a new CrawledPage

    url is a new copy

    The following defaults are used for the different fields:
    - links: no links initially. Use crawled_page_add_link to add some.
    - time: current time
    - score: 0. It can be setted directly.
    - content_hash: NULL. Use @ref crawled_page_set_hash to change

    @return NULL if failure, otherwise a newly allocated CrawledPage
*/
CrawledPage *
crawled_page_new(const char *url);
/** Delete a Crawled Page created with @ref crawled_page_new */
void
crawled_page_delete(CrawledPage *cp);
/** Set content hash from a 64bit hash */
int
crawled_page_set_hash64(CrawledPage *cp, uint64_t hash);
/** Add a new link to the crawled page */
int
crawled_page_add_link(CrawledPage *cp, const char *url, float score);
/** Get number of links inside page */
size_t
crawled_page_n_links(const CrawledPage *cp);
/** Get a pointer to the link */
const LinkInfo *
crawled_page_get_link(const CrawledPage *cp, size_t i);
typedef enum {
     page_db_error_ok = 0,       /**< No error */
     page_db_error_memory,       /**< Error allocating memory */
     page_db_error_invalid_path, /**< File system error */
     page_db_error_internal,     /**< Unexpected error */
     page_db_error_no_page       /**< A page was requested but could not be found */
} PageDBError;
/** Page database.
 *
 * We are really talking about 4 diferent key/value databases:
 *   - info
 *        Contains fixed size information about the whole database. Right now
 *        it just contains the number of pages stored.
 *   - hash2idx
 *        Maps URL hash to index. Indices are consecutive identifier for every
 *        page. This allows to map pages to elements inside arrays.
 *   - hash2info
 *        Maps URL hash to a @ref PageInfo structure.
 *   - links
 *        Maps URL index to links indices. This allows us to make a fast streaming
 *        of all links inside a database.
 */
typedef struct {
     /** Path to the database directory */
     char *path;
     /** The transaction manager counts the number of read and write
         transactions active and is capable of safely performing a
         database resize */
     TxnManager* txn_manager;

     Error *error;

// Options
// -----------------------------------------------------------------------------
     /** If true, do not delete files after deleting object*/
     int persist;
} PageDB;
/** Hash function used to convert from URL to hash */
uint64_t
page_db_hash(const char *url);
/** Creates a new database and stores data inside path
 *
 * @param db In case of @ref ::page_db_error_memory *db could be NULL. In case of
 *           other failures it is nevertheles allocated memory so that the error
 *           code and message can be accessed.
 *
 * @param path Path to directory. In case it doesn't exist it will created.
 *             If it exists and a database is already present operations will
 *             resume with the existing database. Note that you must have read,
 *             write and execute permissions for the directory.
 *
 * @return 0 if success, otherwise the error code
 **/
PageDBError
page_db_new(PageDB **db, const char *path);
/** Close database, delete files if it should not be persisted, and free memory */
PageDBError
page_db_delete(PageDB *db);
/** Set persist option for database */
void
page_db_set_persist(PageDB *db, int value);