src/page_rank_scorer.h

/// @addtogroup PageRankScorer
/// @{

typedef enum {
     page_rank_scorer_error_ok = 0,
     page_rank_scorer_error_memory,
     page_rank_scorer_error_internal,
     page_rank_scorer_error_precision
} PageRankScorerError;
typedef struct {
     PageRank *page_rank;
     PageDB *page_db;

     Error *error;
// Options
// -----------------------------------------------------------------------------
     int persist;
     int use_content_scores;
} PageRankScorer;
PageRankScorerError
page_rank_scorer_new(PageRankScorer **prs, PageDB *db);
PageRankScorerError
page_rank_scorer_delete(PageRankScorer *prs);
void
page_rank_scorer_setup(PageRankScorer *prs, Scorer *scorer);